sauvegarde nouvelle page d'accueil

--- a/main/index.htm
+++ b/main/index.htm
@@ -41,6 +41,12 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 <p>Rejoindre la nouvelle édition</p>
 </section>
 
+<section class="nav">
+<a href="http://l12012.kamoulcup.com/km/"> <img
+	src="./Kamoulcup_files/ballon.png" alt="Fantasy Kamoulox"> </a>
+<p>FANTASY KAMOULOX !</p>
+</section>
+
 
 <section class="nav">
 <a href="http://www.kamouloxdufoot.com/kdf/viewforum.php?f=21"> <img
@@ -52,6 +58,12 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 <a href="http://www.kamoulcup.com/l1/archives/"> <img
 	src="./Kamoulcup_files/coupe.png" alt="Palmarès"> </a>
 <p>Contempler le palmarès</p>
+</section>
+
+<section class="nav">
+<a href="http://www.kamoulcup.com/android/KamoulcupAddict.apk"> <img
+	src="./Kamoulcup_files/robot.png" alt="Androïd"> </a>
+<p>Téléchargez l'appli pour Androïd !</p>
 </section>
 </section>
 
