Saisie des notes Euro 2016

--- a/main/index.htm
+++ b/main/index.htm
@@ -36,9 +36,9 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 
 <section id="menu">
 <section class="nav">
-<a href="http://l12012.kamoulcup.com/"> <img
-	src="./Kamoulcup_files/stade.png" alt="Kamoulcup 2012-13"> </a>
-<p>Rejoindre la nouvelle édition</p>
+<a href="http://www.kamoulcup.com/eurokamoulcup"> <img
+	src="./Kamoulcup_files/stade.png" alt="EURO 2016"> </a>
+<p>Rejoindre la nouvelle édition : Euro 2016 !</p>
 </section>
 
 <section class="nav">
