Fix import for the new season

--- a/main/index.htm
+++ b/main/index.htm
@@ -37,7 +37,7 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 <section id="menu">
 <section class="nav">
 <a href="http://l12012.kamoulcup.com/"> <img
-	src="./Kamoulcup_files/stade.png" alt="Kamoulcup 2012-13"> </a>
+	src="./Kamoulcup_files/stade.png" alt="Kamoulcup L1 saison 2016-17"> </a>
 <p>Rejoindre la nouvelle édition</p>
 </section>
 
