--- a/main/index.htm
+++ b/main/index.htm
@@ -22,8 +22,8 @@
 
 <header>
 
-<div id="logo"><a href="http://l12012.kamoulcup.com/"> <img
-	src="./Kamoulcup_files/logo.png" alt="Kamoulcup 2012"> </a></div>
+<div id="logo"><a href="http://wc2018.kamoulcup.com/"> <img
+	src="./Kamoulcup_files/logo.png" alt="Kamoulcup"> </a></div>
 </header>
 
 
@@ -36,15 +36,9 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 
 <section id="menu">
 <section class="nav">
-<a href="http://www.kamoulcup.com/eurokamoulcup"> <img
-	src="./Kamoulcup_files/stade.png" alt="EURO 2016"> </a>
-<p>Rejoindre la nouvelle édition : Euro 2016 !</p>
-</section>
-
-<section class="nav">
-<a href="http://l12012.kamoulcup.com/km/"> <img
-	src="./Kamoulcup_files/ballon.png" alt="Fantasy Kamoulox"> </a>
-<p>FANTASY KAMOULOX !</p>
+<a href="http://www.kamoulcup.com/wc2018"> <img
+	src="./Kamoulcup_files/stade.png" alt="WC 2018"> </a>
+<p>Rejoindre la nouvelle édition : WC 2018 !</p>
 </section>
 
 
@@ -55,7 +49,7 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 </section>
 
 <section class="nav">
-<a href="http://www.kamoulcup.com/l1/archives/"> <img
+<a href="http://www.kamoulcup.com/events/archives/"> <img
 	src="./Kamoulcup_files/coupe.png" alt="Palmarès"> </a>
 <p>Contempler le palmarès</p>
 </section>
