--- a/main/index.htm
+++ b/main/index.htm
@@ -36,7 +36,7 @@ est l'occasion de polémiques inutiles. Viens rigoler avec nous !</p>
 
 <section id="menu">
 <section class="nav">
-<a href="http://www.kamoulcup.com/wc2018"> <img
+<a href="http://wc2018.kamoulcup.com/"> <img
 	src="./Kamoulcup_files/stade.png" alt="WC 2018"> </a>
 <p>Rejoindre la nouvelle édition : WC 2018 !</p>
 </section>
